--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "date-fns": "^4.1.0",
     "mysql2": "^3.11.3",
     "passport": "^0.7.0",
+    "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
     "typeorm": "^0.3.20"
