modificaiones al .cpanel

--- a/.cpanel.yml
+++ b/.cpanel.yml
@@ -1,6 +1,6 @@
 ---
 deployment:
   tasks:
-    - export NODE_ENV=production
+    - cd /home/sisw424/repositories/SistemaAcademicoBackend
     - /usr/local/bin/npm install
     - /usr/local/bin/npm run start:dev
